--- a/slides/index.html
+++ b/slides/index.html
@@ -1,7 +1,22 @@
-<div class="links"> 
-  
-  <h2> GitStarted Workshop Slides</h2>
-  
-<li>https://docs.google.com/presentation/d/1HFPjgzQGc7VJk1sKLHwkVwKcfM4SxfXGbkdiJSuBjTg/edit?usp=sharing</li>
+<!DOCTYPE html>
+<html lang="en">
 
-<div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="0; url=https://docs.google.com/presentation/d/1HFPjgzQGc7VJk1sKLHwkVwKcfM4SxfXGbkdiJSuBjTg/edit?usp=sharing">
+  <script type="text/javascript">
+    window.location.href = "https://docs.google.com/presentation/d/1HFPjgzQGc7VJk1sKLHwkVwKcfM4SxfXGbkdiJSuBjTg/edit?usp=sharing"
+  </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>GitStarted Workshop Slides - Developer Student Clubs at UW</title>
+</head>
+
+<body>
+  You can access the slides at
+  <a href="https://docs.google.com/presentation/d/1HFPjgzQGc7VJk1sKLHwkVwKcfM4SxfXGbkdiJSuBjTg/edit?usp=sharing">
+    https://docs.google.com/presentation/d/1HFPjgzQGc7VJk1sKLHwkVwKcfM4SxfXGbkdiJSuBjTg/edit?usp=sharing
+  </a>
+</body>
+
+</html>
